# lem-data-handler

./: .gitignore  README.md  pyproject.toml
examples/: data_loader_examples.py  los_examples.py  los_from_subareas.py  zone_mapping_examples.py  zone_transformer_examples.py
examples/modules/: beeline_distance_module.py  example_config.json  zone_data_module.py  zone_mapping_module.py
src/model_data/: __init__.py  aggregation.py  constants.py  data_item.py  data_loader.py  environment.py  los.py  module.py  zone_mapping.py  zone_transformer.py
tests/: conftest.py  test_data_aggregation.py  test_data_item.py  test_environment.py  test_zone_mapping.py  test_zone_transformer.py
tests/data/: data.csv  network.gpkg  network2.gpkg  test_data.qgz  zone_data.gpkg
tests/data/los/: cost_aht.omx  cost_iht.omx  cost_pt.omx  dist_aht.omx  dist_iht.omx  dist_pt.omx  time_aht.omx  time_iht.omx  time_pt.omx
